[workspace]
resolver = "2"

members = [
    "crates/sy_types",
    "crates/sy_config",
    "crates/sy_protocol",
    "crates/sy_api",
    "crates/sy_core",
    "crates/sy_infra",
    "crates/sy_loader",
    "crates/sy_tools",
    "crates/sy_testkit",
    "mods/mod_economics",
    "mods/mod_physics",
    "bin/server_d",
    "bin/sy_cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["See-Yuj Team"]
license = "MIT"

[workspace.dependencies]
# Internal crates
sy_types = { path = "crates/sy_types" }
sy_config = { path = "crates/sy_config" }
sy_protocol = { path = "crates/sy_protocol" }
sy_api = { path = "crates/sy_api" }
sy_core = { path = "crates/sy_core" }
sy_infra = { path = "crates/sy_infra" }
sy_loader = { path = "crates/sy_loader" }
sy_tools = { path = "crates/sy_tools" }
sy_testkit = { path = "crates/sy_testkit" }

# External dependencies (versions pinned)
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tracing = "0.1"
