[workspace]
resolver = "2"

members = [
    # Phase 1 crates
    "crates/sy_types",
    "crates/sy_config",
    "crates/sy_api",
    "crates/sy_core",
    "crates/sy_infra",
    "crates/sy_loader",
    "crates/sy_tools",
    "crates/sy_testkit",
    "bin/server_d",
    "bin/sy_cli",
    # Phase 2+ (commented out, directories preserved for architecture)
    # "crates/sy_protocol",  # Wire protocol - Phase 2
    # "mods/mod_economics",  # Economics module - Phase 2+
    # "mods/mod_physics",    # Physics module - Phase 2+
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["See-Yuj Team"]
license = "MIT"

[workspace.dependencies]
# Internal crates (Phase 1)
sy_types = { path = "crates/sy_types" }
sy_config = { path = "crates/sy_config" }
sy_api = { path = "crates/sy_api" }
sy_core = { path = "crates/sy_core" }
sy_infra = { path = "crates/sy_infra" }
sy_loader = { path = "crates/sy_loader" }
sy_tools = { path = "crates/sy_tools" }
sy_testkit = { path = "crates/sy_testkit" }
# Phase 2+ crates (commented out)
# sy_protocol = { path = "crates/sy_protocol" }

# External dependencies (versions pinned)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }
ctrlc = "3.4"
crc32fast = "1.3"
byteorder = "1.5"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
