[package]
name = "sy_core"
version.workspace = true
edition.workspace = true

[dependencies]
sy_types.workspace = true
sy_api.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
xxhash-rust.workspace = true
byteorder.workspace = true

[dev-dependencies]
sy_testkit.workspace = true
