[package]
name = "sy_infra"
version.workspace = true
edition.workspace = true

[dependencies]
sy_types.workspace = true
sy_config.workspace = true
# sy_protocol.workspace = true  # Phase 2
sy_api.workspace = true
sy_core.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
crc32fast.workspace = true
byteorder.workspace = true
